# GitHubWallpaper

./: .gitignore  Directory.Build.props  GitHubWallpaper.sln  LICENSE  README.md  ROADMAP.md
python/: GitHubWallpaper.spec  GitHubWallpaperBootstrap.spec  pyproject.toml
python/github_wallpaper/: __init__.py  __main__.py  _build_flavor.py  app.py  app_restart.py  autostart.py  main.py  paths.py  repo_url_parser.py  settings_store.py  single_instance.py
python/github_wallpaper/bootstrap/: __init__.py  installer.py  main.py  runtime_paths.py  runtime_version.py
python/github_wallpaper/desktop/: __init__.py  auto_pause_monitor.py  backend.py  linux_backend.py  open_url.py  screen_helper.py  windows_backend.py
python/github_wallpaper/github/: __init__.py  activity_aggregator.py  api_parsers.py  credential_store.py  gh_cli_auth.py  github_client.py  github_models.py  github_poll_error.py  github_session.py  poll_intervals.py  rate_limit_guard.py  repo_poller.py
python/github_wallpaper/settings/: __init__.py  grid_layout_editor.py  settings_card.py  settings_dialog.py  settings_theme.py
python/github_wallpaper/update/: __init__.py  app_version.py  asset_download.py  checker.py  defaults.py  installer.py  models.py  progress_dialog.py  service.py
python/github_wallpaper/wallpaper/: __init__.py  bridge.py  (+4 more)
python/scripts/: build_release.py
python/tests/: test_app_restart.py  test_asset_download.py  test_bootstrap.py  test_bridge.py  test_credential_store.py  test_gh_cli_auth.py  test_github.py  test_screen_helper.py  test_settings_store.py  test_update.py
(+85 files in other folders)
