[project]
name = "github-wallpaper"
version = "2.0.0a1"
description = "Dynamic GitHub activity wallpapers (v2.0, cross-platform)"
requires-python = ">=3.11"
dependencies = [
    "PySide6>=6.6",
    "httpx>=0.27",
    "keyring>=25.0",
    "pydantic>=2.0",
]

[project.scripts]
github-wallpaper = "github_wallpaper.main:main"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["github_wallpaper"]

[tool.hatch.build.targets.wheel.force-include]
"github_wallpaper/wallpaper/assets" = "github_wallpaper/wallpaper/assets"
